force-app/main/default/objects/Admission__c/Admission__c.object-meta.xml
<CustomObject>
    <label>Admission</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>admissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>