force-app/main/default/objects/Admission__c/fields/Father_Name__c.field-meta.xml
<CustomField>
    <fullName>Father_Name__c</fullName>
    <label>Father&apos;s Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>