force-app/main/default/objects/Admission__c/fields/Father_s_Annulal_salary__c.field-meta.xml
<CustomField>
    <fullName>Father_s_Annulal_salary__c</fullName>
    <label>Father&apos;s Annulal salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>