force-app/main/default/objects/Admission__c/fields/Father_s_Job__c.field-meta.xml
<CustomField>
    <fullName>Father_s_Job__c</fullName>
    <label>Father&apos;s Job</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>No job</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>